--- a/springcloud-consumer-dept-8080/pom.xml
+++ b/springcloud-consumer-dept-8080/pom.xml
@@ -12,6 +12,18 @@
     <artifactId>springcloud-consumer-dept-8080</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-ribbon</artifactId>
+            <version>1.4.6.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka-server</artifactId>
+            <version>1.4.6.RELEASE</version>
+        </dependency>
+
         <dependency>
             <groupId>com.yang</groupId>
             <artifactId>springcloud-api</artifactId>
