--- a/springcloud-consumer-dept-8080/src/main/resources/application.yaml
+++ b/springcloud-consumer-dept-8080/src/main/resources/application.yaml
@@ -1,2 +1,8 @@
 server:
   port: 8080
+
+eureka:
+  client:
+    register-with-eureka: false
+    service-url:
+      defaultZone: http://eureka7001:7001/eureka/,http://eureka7002:7002/eureka/,http://eureka7003:7003/eureka/
